--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '14'
           registry-url: 'https://registry.npmjs.org/'
-      - run: npm install
-      - run: npm release
+      - run: pnpm install
+      - run: pnpm release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
